# veesker

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL_USE.md  CONTRIBUTING.md  DEBT.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  REMEDIATION_NOTES.md  SECURITY.md  TERMS_OF_USE.md  dev-with-vcvars.cmd  package.json  tsconfig.json  vitest.config.ts
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  osv-scanner.yml  release.yml  security-audit.yml
.validation/: findings.md  inventory.md  review-frontend.md  review-sidecar-core.md  review-sidecar-specialized.md  triage.md
addons/: README.md
addons/audit-shipper/: LICENSE  README.md  manifest.json  plugin.ts
docs/: AUTO_UPDATE.md  CODE_SIGNING.md  ENTERPRISE.md  PRICING.md  hr_schema.sql
docs/superpowers/analysis/: 2026-05-09-feature-inventory-vs-competitors.md
docs/superpowers/decisions/: 2026-05-12-schema-tree-keyed-each-debt.md
docs/superpowers/plans/: 2026-04-20-connection-manager-mvp1.md  2026-04-20-connection-persistence-mvp2.md  2026-04-21-schema-browser.md  2026-04-21-sql-editor-mvp.md  2026-04-21-wallet-support.md  2026-04-22-plsql-ide.md  2026-04-22-sql-editor-pro.md  2026-04-23-dark-mode-minimap.md  2026-04-23-phase5-export-explain-procexec.md  2026-04-23-sheep-reports.md  2026-04-23-tray-icon.md  2026-04-24-help-documentation.md  2026-04-24-security-features.md  (+4 more)
engine/: .gitignore  README.md  package.json  tsconfig.json
engine/src/: duckdb-host.ts  index.ts
engine/tests/: crypto.test.ts  duckdb-host.test.ts  e2e.test.ts  info.test.ts  oracle-shim.test.ts  vsk-format.test.ts
scripts/: build-sidecar.sh  check-no-pt-br.ts  copy-duckdb-binding.ts
sidecar/: package.json  tsconfig.json
sidecar/src/: ai-approval-state.ts  ai.test.ts  ai.ts  chart.ts  debug.ts  embedding.ts  errors.ts  flow-types.ts  flow.ts  handlers.test.ts  handlers.ts  index.ts  item-1a.test.ts  item-1b-directories.test.ts  item-1c.test.ts  item-1e.test.ts  logger.ts  notifications.ts  oracle-session-self.test.ts  oracle.ts  ords.ts  perf-stats.ts  pii.test.ts  pii.ts  prod-detector.ts  rpc.ts  sandbox.handler.ts  sql-kind.ts  sql-splitter.ts  state.ts  vision.test.ts
sidecar/tests/: ai-approval-rpc.test.ts  ai-approval-state.test.ts  chart.test.ts  dbms-output-rpc.test.ts  debug-block-gen.test.ts  flow.integration.test.ts  flow.test.ts  handlers.test.ts  identification.test.ts  notifications.test.ts  oracle-query-multi.test.ts  oracle-query-streaming.test.ts  oracle-query.test.ts  ords.test.ts  perf-stats.test.ts  query-cancel.test.ts  rpc.test.ts  sandbox-member-pull.integration.test.ts  sandbox.integration.test.ts  sql-kind.test.ts  sql-splitter.test.ts  state.test.ts  tx-state.test.ts  unsafe-dml-env.test.ts  workspace-open-env.test.ts
src/: app.css  app.html  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  lib.rs  main.rs  sidecar.rs  terminal.rs  tray.rs
src-tauri/src/audit/: chain.rs  mod.rs  redact.rs
src-tauri/src/persistence/: command_history.rs  connection_config.rs  connections.rs  history.rs  keep_open.rs  mod.rs  object_versions.rs  secrets.rs  store.rs  tnsnames.rs  wallet.rs
src/lib/: ConnectionForm.svelte  VeeskerMark.svelte  connection.ts  connections.ts  csv-export.test.ts  csv-export.ts  help-modules.ts  help-progress.test.ts  help-progress.ts  object-versions.ts  plugins.ts  query-history.ts  sandbox.test.ts  sandbox.ts  sql-files.ts  sql-query.ts  sql-safety.test.ts  sql-safety.ts  sql-splitter.test.ts  sql-splitter.ts  workspace.ts
src/routes/: +layout.svelte  +page.svelte
(+311 files in other folders)
