[package]
name = "veesker"
version = "0.0.1"
description = "The studio for Oracle 23ai vector search"
authors = ["Geraldo F. Viana Júnior <geefatec@gmail.com>"]
edition = "2021"

[lib]
name = "veesker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["rt", "sync", "io-util", "macros"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
zip = "2"
tauri-plugin-dialog = "2"
