[package]
name = "veesker"
version = "0.0.1"
description = "The studio for Oracle 23ai vector search"
authors = ["Geraldo F. Viana Júnior <geefatec@gmail.com>"]
edition = "2021"

[lib]
name = "veesker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Force the binary file to be "Veesker" (Title Case) so macOS Dock shows
# the proper app name in `tauri dev` mode (no .app bundle is built in dev,
# so the Dock falls back to the executable filename).
[[bin]]
name = "Veesker"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["rt", "sync", "io-util", "macros"] }
uuid = { version = "1", features = ["v4"] }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
zip = "2"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
